--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:background="#ff00dfff"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="Trang chính">
+                app:title="Home">
             </androidx.appcompat.widget.Toolbar>
             <ViewFlipper
                 android:id="@+id/viewlipper"
