--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:textSize="20sp"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@android:color/holo_red_light"
+                    android:textColor="@android:color/white"
                     android:textStyle="bold"
                     android:text="Sản phẩm mới nhất"
                     android:layout_width="wrap_content"
@@ -58,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ListView
+                android:layout_marginTop="10dp"
                 android:id="@+id/listviewmanhinhchinh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
