--- a/app/src/main/res/layout/item_truyen.xml
+++ b/app/src/main/res/layout/item_truyen.xml
@@ -5,7 +5,7 @@
     app:cardCornerRadius="4dp"
     android:layout_margin="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,13 +20,11 @@
             android:layout_height="100dp"
             android:layout_weight="3"
             android:src="@drawable/iconnew_w512" />
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:orientation="vertical">
-
             <TextView
                 android:id="@+id/itemdt_ten"
                 android:layout_width="match_parent"
@@ -35,7 +33,6 @@
                 android:text="Tên sản phẩm"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/itemdt_gia"
                 android:layout_width="wrap_content"
@@ -43,7 +40,6 @@
                 android:text="Giá: 20000đ"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="16sp" />
-
             <TextView
                 android:id="@+id/itemdt_mota"
                 android:layout_width="wrap_content"
