--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
         <FrameLayout
+            android:id="@+id/framegiohang"
             android:layout_marginRight="10dp"
             android:layout_gravity="right"
             android:layout_width="55dp"
