--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -28,7 +28,7 @@
         android:id="@+id/recyclerviewgiohang"
         android:layout_margin="5dp"
         app:layout_constraintTop_toBottomOf="@+id/toobar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
     <LinearLayout
