--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -55,7 +55,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btdangnhap"
         app:layout_constraintTop_toBottomOf="@+id/line2"
-        android:background="@color/colortext"
+        android:background="@drawable/background_button"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
@@ -77,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/txtdangki"
             android:layout_marginLeft="5dp"
             android:text="Đăng kí"
             android:textSize="15sp"
