--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:hint="Email"
+            android:id="@+id/email"
             android:inputType="textEmailAddress"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
             android:hint="Pass"
+            android:id="@+id/pass"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:inputType="textPassword"
@@ -53,7 +55,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btdangnhap"
+        android:id="@+id/btndangnhap"
         app:layout_constraintTop_toBottomOf="@+id/line2"
         android:background="@drawable/background_button"
         android:layout_marginRight="25dp"
@@ -68,7 +70,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/btdangnhap"
+        app:layout_constraintTop_toBottomOf="@+id/btndangnhap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
