--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -97,6 +97,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <androidx.appcompat.widget.AppCompatButton
+            android:text="video giới thiệu"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/btnyoutube"
+            android:backgroundTint="#888888"
+            android:layout_width="wrap_content"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
