--- a/app/src/main/res/layout/item_donhang.xml
+++ b/app/src/main/res/layout/item_donhang.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
+        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:id="@+id/recyclerview_chitiet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
